testsuite/poke.pkl/pow-diag-2.pk
/* { dg-do compile } */

var a = "foo" ** 2; /* { dg-error "invalid operand.*\n.*expected integral or offset" } */
